--- a/404.html
+++ b/404.html
@@ -28,6 +28,8 @@
 <meta name="twitter:card" content="summary_large_image">
   
   
+    <link rel="manifest" href="manifest.json" />
+  
   <title>页面走丢啦~ || 启动台の博客</title>
 
   <link  rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4/dist/css/bootstrap.min.css" />
