--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
   
   
     <link rel="manifest" href="manifest.json" />
+<script type="module">
+ import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
+ const el = document.createElement('pwa-update');
+ document.body.appendChild(el);
+</script>
+
   
   <title>启动台の博客</title>
 
