--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
       <p class="index-excerpt">
         <a href="/p/4a17b156.html" target="_self">
           
-          你好，世界！本站于2019-03-31建立，于2022-03-31重建很多文章都丢失了，相当于新站了。
+          有东西被加密了, 请输入密码查看。
         </a>
       </p>
 
